Fix visibility of alias of zsuper methods

This was broken by 71c746379d5872e250d90ae45c585760afaf9516.

Fixes [Bug #18600]